@@ -29,7 +29,7 @@
 
 #if !defined( HAVE_LOCAL_LIBVMDK )
 
-/* Set the verbose notification
+/* Sets the verbose notification
  */
 void libvmdk_notify_set_verbose(
       int verbose )
@@ -38,7 +38,7 @@ void libvmdk_notify_set_verbose(
 	 verbose );
 }
 
-/* Set the notification stream
+/* Sets the notification stream
  * Returns 1 if successful or -1 on error
  */
 int libvmdk_notify_set_stream(
